feat: 🎯时间复杂度

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -54,4 +54,48 @@ function cal(n) {
 }
 ```
 
-我们依旧假设每个语句的执行时间是 unit_time。那这段代码的总执行时间 T(n) 是多少呢？第 2、3、4 行代码，每行都需要 1 个 unit_time 的执行时间，第 5、6 行代码循环执行了 n 遍，需要 2n * unit_time 的执行时间，第 7、8 行代码循环执行了 n2遍，所以需要 2n2* unit_time 的执行时间。所以，整段代码总的执行时间 T(n) = (2n2+2n+3)*unit_time。尽管我们不知道 unit_time 的具体值，但是通过这两段代码执行时间的推导过程，我们可以得到一个非常重要的规律，那就是，所有代码的执行时间 T(n) 与每行代码的执行次数 n 成正比。
+我们依旧假设每个语句的执行时间是 unit_time。那这段代码的总执行时间 T(n) 是多少呢？
+
+第 2、3、4 行代码，每行都需要 1 个 unit_time 的执行时间，第 5、6 行代码循环执行了 n 遍，需要 2n * unit_time 的执行时间，第 7、8 行代码循环执行了 n2遍，所以需要 2n2* unit_time 的执行时间。所以，整段代码总的执行时间 T(n) = (2n2+2n+3)*unit_time。尽管我们不知道 unit_time 的具体值，但是通过这两段代码执行时间的推导过程，我们可以得到一个非常重要的规律，那就是，所有代码的执行时间 T(n) 与每行代码的执行次数 n 成正比。
+
+我们可以把这个规律总结成一个公式
+
+```
+T(n) = O(f(n))
+```
+
+T(n) 它表示代码执行的时间；
+
+n 表示数据规模的大小；
+
+f(n) 表示每行代码执行的次数总和。因为这是一个公式，所以用 f(n) 来表示。
+
+公式中的 O，表示代码的执行时间 T(n) 与 f(n) 表达式成正比。
+
+所以，第一个例子中的 T(n) = O(2n+2)，第二个例子中的 T(n) = O(2n2+2n+3)。这就是大 O 时间复杂度表示法。大 O 时间复杂度实际上并不具体表示代码真正的执行时间，而是表示代码执行时间随数据规模增长的变化趋势，所以，也叫作渐进时间复杂度（asymptotic time complexity），简称时间复杂度。
+
+### 时间复杂度分析
+
+1. 如何分析一段代码的时间复杂度
+
+我刚才说了，大 O 这种复杂度表示方法只是表示一种变化趋势。我们通常会忽略掉公式中的常量、低阶、系数，只需要记录一个最大阶的量级就可以了。所以，我们在分析一个算法、一段代码的时间复杂度的时候，也只关注循环执行次数最多的那一段代码就可以了。这段核心代码执行次数的 n 的量级，就是整段要分析代码的时间复杂度。
+
+为了便于你理解，我还拿前面的例子来说明。
+
+```js
+function cal (n) {
+  let sum  = 0
+  let i = i
+  for(i <= n; ++i) {
+    sum = sum + i
+  }
+  return sum
+}
+```
+
+其中第 2、3 行代码都是常量级的执行时间，与 n 的大小无关，所以对于复杂度并没有影响。循环执行次数最多的是第 4、5 行代码，所以这块代码要重点分析。前面我们也讲过，这两行代码被执行了 n 次，所以总的时间复杂度就是 O(n)。
+
+2. 加法法则：总复杂度等于量级最大的那段代码的复杂度
+
+分析如下代码
+
