feat: 🎯时间复杂度

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -99,3 +99,39 @@ function cal (n) {
 
 分析如下代码
 
+```js
+function cal(n) {
+  let sum_1 = 0
+  let p = 1
+  for(p <=100; ++p) {
+    sum_1 = sum_1 + p
+  }
+
+  let sum_2 = 0;
+  let q = 1;
+  for (q < n; ++q){
+     sum_2 = sum_2 + q;
+  }
+
+  let sum_3 = 0;
+  let i = 1;
+  let j = 1;
+  for (i <= n; ++i) {
+    j = 1;
+    for (j <= n; ++j) {
+      sum_3 = sum_3 + i * j;
+    }
+  }
+
+  return sum_1 + sum_2 + sum_3;
+}
+```
+
+这个代码分为三部分，分别是求 sum_1、sum_2、sum_3。我们可以分别分析每一部分的时间复杂度，然后把它们放到一块儿，再取一个量级最大的作为整段代码的复杂度。
+
+第一段的时间复杂度是多少呢？这段代码循环执行了 100 次，所以是一个常量的执行时间，跟 n 的规模无关。
+
+这里我要再强调一下，即便这段代码循环 10000 次、100000 次，只要是一个已知的数，跟 n 无关，照样也是常量级的执行时间。当 n 无限大的时候，就可以忽略。尽管对代码的执行时间会有很大影响，但是回到时间复杂度的概念来说，它表示的是一个算法执行效率与数据规模增长的变化趋势，所以不管常量的执行时间多大，我们都可以忽略掉。因为它本身对增长趋势并没有影响。
+
+
+
