feat: 🎯 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -133,5 +133,28 @@ function cal(n) {
 
 这里我要再强调一下，即便这段代码循环 10000 次、100000 次，只要是一个已知的数，跟 n 无关，照样也是常量级的执行时间。当 n 无限大的时候，就可以忽略。尽管对代码的执行时间会有很大影响，但是回到时间复杂度的概念来说，它表示的是一个算法执行效率与数据规模增长的变化趋势，所以不管常量的执行时间多大，我们都可以忽略掉。因为它本身对增长趋势并没有影响。
 
+综合这三段代码的时间复杂度，我们取其中最大的量级。所以，整段代码的时间复杂度就为 O(n2)。也就是说：总的时间复杂度就等于量级最大的那段代码的时间复杂度。那我们将这个规律抽象成公式就是：
+
+如果
+
+```txt
+T1(n)=O(f(n));
+T2(n)=O(g(n))；
+那么
+T(n)=T1(n)+T2(n)=max(O(f(n)), O(g(n))) =O(max(f(n), g(n))).
+```
+
+3. 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积
+
+我刚讲了一个复杂度分析中的加法法则，这儿还有一个乘法法则。
+类比一下，你应该能“猜到”公式是什么样子的吧？
+
+```txt
+T1(n)=O(f(n))，
+T2(n)=O(g(n))；
+那么
+T(n)=T1(n)*T2(n)=O(f(n))*O(g(n))=O(f(n)*g(n)).
+```
+
 
 
