feat: 🎯时间复杂度分析

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -156,5 +156,27 @@ T2(n)=O(g(n))；
 T(n)=T1(n)*T2(n)=O(f(n))*O(g(n))=O(f(n)*g(n)).
 ```
 
+3. 乘法法则：嵌套代码的复杂度等于嵌套内外代码复杂度的乘积
+
+```js
+function cal(n) {
+   let ret = 0;
+   let i = 1;
+   for (; i < n; ++i) {
+     ret = ret + f(i);
+    }
+}
+function f(n) {
+  let sum = 0;
+  let i = 1;
+  for (; i < n; ++i) {
+    sum = sum + i;
+  }
+  return sum;
+}
+```
+
+我们单独看 cal() 函数。假设 f() 只是一个普通的操作，那第 4～6 行的时间复杂度就是，T1(n) = O(n)。但 f() 函数本身不是一个简单的操作，它的时间复杂度是 T2(n) = O(n)，所以，整个 cal() 函数的时间复杂度就是，T(n) = T1(n) * T2(n) = O(n*n) = O(n2)。
+
 
 
