feat 🎨 [200~几种常见时间复杂度实例分析~

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -178,5 +178,17 @@ function f(n) {
 
 我们单独看 cal() 函数。假设 f() 只是一个普通的操作，那第 4～6 行的时间复杂度就是，T1(n) = O(n)。但 f() 函数本身不是一个简单的操作，它的时间复杂度是 T2(n) = O(n)，所以，整个 cal() 函数的时间复杂度就是，T(n) = T1(n) * T2(n) = O(n*n) = O(n2)。
 
+### 几种常见时间复杂度实例分析
+
+```txt
+1. 常量阶O(1)
+2. 对数阶O(logn)
+3. 线性阶O(n)
+4. 线性对数阶O(nlogn)
+5. 平方阶 O(n * n) 立方阶 O(n * n * n) .....
+6. 增数阶O(2的N次方)
+7. 阶乘阶O(n!)
+```
+
 
 
