feat: 🧩几种常见时间复杂度实例分析

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -190,5 +190,11 @@ function f(n) {
 7. 阶乘阶O(n!)
 ```
 
+对于刚罗列的复杂度量级，我们可以粗略地分为两类，多项式量级和非多项式量级。其中，非多项式量级只有两个：O(2n) 和 O(n!)。
+
+我们把时间复杂度为非多项式量级的算法问题叫作 NP（Non-Deterministic Polynomial，非确定多项式）问题。
+
+当数据规模 n 越来越大时，非多项式量级算法的执行时间会急剧增加，求解问题的执行时间会无限增长。所以，非多项式时间复杂度的算法其实是非常低效的算法。因此，关于 NP 时间复杂度我就不展开讲了。我们主要来看几种常见的多项式时间复杂度。
+
 
 
