--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -196,5 +196,15 @@ function f(n) {
 
 当数据规模 n 越来越大时，非多项式量级算法的执行时间会急剧增加，求解问题的执行时间会无限增长。所以，非多项式时间复杂度的算法其实是非常低效的算法。因此，关于 NP 时间复杂度我就不展开讲了。我们主要来看几种常见的多项式时间复杂度。
 
+#### 1. O(1)
+
+首先你必须明确一个概念，O(1) 只是常量级时间复杂度的一种表示方法，并不是指只执行了一行代码。比如这段代码，即便有 3 行，它的时间复杂度也是 O(1），而不是 O(3)。
+
+```js
+let i = 8;
+let j = 6;
+let sum = i + j;
+```
+
 
 
