feat: 🎯O(logn)、O(nlogn)

--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -206,5 +206,26 @@ let j = 6;
 let sum = i + j;
 ```
 
+我稍微总结一下，只要代码的执行时间不随 n 的增大而增长，这样代码的时间复杂度我们都记作 O(1)。或者说，一般情况下，只要算法中不存在循环语句、递归语句，即使有成千上万行的代码，其时间复杂度也是Ο(1)。
+
+#### 2. O(logn)、O(nlogn)
+
+对数阶时间复杂度非常常见，同时也是最难分析的一种时间复杂度。我通过一个例子来说明一下。
+
+```js
+i=1;
+while (i <= n) {
+   i = i * 2;
+}
+```
+
+根据我们前面讲的复杂度分析方法，第三行代码是循环执行次数最多的。所以，我们只要能计算出这行代码被执行了多少次，就能知道整段代码的时间复杂度。从代码中可以看出，变量 i 的值从 1 开始取，每循环一次就乘以 2。当大于 n 时，循环结束。还记得我们高中学过的等比数列吗？实际上，变量 i 的取值就是一个等比数列。如果我把它一个一个列出来，就应该是这个样子的：
+
+```txt
+2的0次方 2的1次方 2的2次方 .... 2的x次方
+```
+
+所以，我们只要知道 x 值是多少，就知道这行代码执行的次数了。通过 2x=n 求解 x 这个问题我们想高中应该就学过了，我就不多说了。x=log2n，所以，这段代码的时间复杂度就是 O(log2n)。
+
 
 
