--- a/入门篇/复杂度分析上.md
+++ b/入门篇/复杂度分析上.md
@@ -235,13 +235,35 @@ i=1; while (i <= n) { i = i * 3; }
 
 根据我刚刚讲的思路，很简单就能看出来，这段代码的时间复杂度为 O(log3n)。
 
-
 实际上，不管是以 2 为底、以 3 为底，还是以 10 为底，我们可以把所有对数阶的时间复杂度都记为 O(logn)。为什么呢？
 
 我们知道，对数之间是可以互相转换的，log3n 就等于 log32 * log2n，所以 O(log3n) = O(C * log2n)，其中 C=log32 是一个常量。基于我们前面的一个理论：在采用大 O 标记复杂度的时候，可以忽略系数，即 O(Cf(n)) = O(f(n))。所以，O(log2n) 就等于 O(log3n)。因此，在对数阶时间复杂度的表示方法里，我们忽略对数的“底”，统一表示为 O(logn)。
 
-
 如果你理解了我前面讲的 O(logn)，那 O(nlogn) 就很容易理解了。还记得我们刚讲的乘法法则吗？如果一段代码的时间复杂度是 O(logn)，我们循环执行 n 遍，时间复杂度就是 O(nlogn) 了。而且，O(nlogn) 也是一种非常常见的算法时间复杂度。比如，归并排序、快速排序的时间复杂度都是 O(nlogn)。
+
+#### 3. O(m+n)、O(m*n)
+
+我们再来讲一种跟前面都不一样的时间复杂度，代码的复杂度由两个数据的规模来决定。老规矩，先看代码！
+
+```js
+function cal(m, n) {
+  let sum_1 = 0;
+  let i = 1;
+  for (; i < m; ++i) {
+    sum_1 = sum_1 + i;
+  }
+  let sum_2 = 0;
+  let j = 1;
+  for (; j < n; ++j) {
+    sum_2 = sum_2 + j;
+  }
+  return sum_1 + sum_2;
+}
+```
+
+从代码中可以看出，m 和 n 是表示两个数据规模。我们无法事先评估 m 和 n 谁的量级大，所以我们在表示复杂度的时候，就不能简单地利用加法法则，省略掉其中一个。所以，上面代码的时间复杂度就是 O(m+n)。
+
+针对这种情况，原来的加法法则就不正确了，我们需要将加法规则改为：T1(m) + T2(n) = O(f(m) + g(n))。但是乘法法则继续有效：T1(m)*T2(n) = O(f(m) * f(n))。
 
 
 
