feat: 🎯 浅析最好、最坏、平均、均摊时间复杂度

--- a/入门篇/复杂度分析下.md
+++ b/入门篇/复杂度分析下.md
@@ -83,4 +83,36 @@ function find(array, n, x) {
 
 你可能会说，平均时间复杂度分析好复杂啊，还要涉及概率论的知识。实际上，在大多数情况下，我们并不需要区分最好、最坏、平均情况时间复杂度三种情况。像我们上一节课举的那些例子那样，很多时候，我们使用一个复杂度就可以满足需求了。只有同一块代码在不同的情况下，时间复杂度有量级的差距，我们才会使用这三种复杂度表示法来区分。
 
+## 均摊时间复杂度
 
+到此为止，你应该已经掌握了算法复杂度分析的大部分内容了。下面我要给你讲一个更加高级的概念，均摊时间复杂度，以及它对应的分析方法，摊还分析（或者叫平摊分析）。
+
+均摊时间复杂度，听起来跟平均时间复杂度有点儿像。对于初学者来说，这两个概念确实非常容易弄混。我前面说了，大部分情况下，我们并不需要区分最好、最坏、平均三种复杂度。平均复杂度只在某些特殊情况下才会用到，而均摊时间复杂度应用的场景比它更加特殊、更加有限。
+
+老规矩，我还是借助一个具体的例子来帮助你理解。（当然，这个例子只是我为了方便讲解想出来的，实际上没人会这么写。）
+
+```js
+// array表示一个长度为n的数组
+// 代码中的array.length就等于n
+let array = [];
+let count = 0;
+function insert(val) {
+  if (count === array.length) {
+    let sum = 0;
+    for (let i = 0; i < array.length; ++i) {
+      sum = sum + array[i];
+    }
+    array[0] = sum;
+    count = 1;
+  }
+  array[count] = val;
+  ++count;
+  console.log(count)
+  console.log(array)
+}
+insert(5)
+```
+
+我先来解释一下这段代码。这段代码实现了一个往数组中插入数据的功能。当数组满了之后，也就是代码中的 count == array.length 时，我们用 for 循环遍历数组求和，并清空数组，将求和之后的 sum 值放到数组的第一个位置，然后再将新的数据插入。但如果数组一开始就有空闲空间，则直接将数据插入数组。
+
+那这段代码的时间复杂度是多少呢？你可以先用我们刚讲到的三种时间复杂度的分析方法来分析一下。
