--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -13,3 +13,13 @@
 这个定义里有几个关键词，理解了这几个关键词，我想你就能彻底掌握数组的概念了。下面就从我的角度分别给你“点拨”一下。
 
 第一是线性表（Linear List）。顾名思义，线性表就是数据排成像一条线一样的结构。每个线性表上的数据最多只有前和后两个方向。其实除了数组，链表、队列、栈等也是线性表结构。
+
+```txt
+  数组
+0 a[0]
+1 a[1]
+2 a[2]
+ .
+ .
+ .
+```
