--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -14,12 +14,4 @@
 
 第一是线性表（Linear List）。顾名思义，线性表就是数据排成像一条线一样的结构。每个线性表上的数据最多只有前和后两个方向。其实除了数组，链表、队列、栈等也是线性表结构。
 
-```txt
-  数组
-0 a[0]
-1 a[1]
-2 a[2]
- .
- .
- .
-```
+![avatar](http://baidu.com/pic/doge.png)
