--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -14,4 +14,4 @@
 
 第一是线性表（Linear List）。顾名思义，线性表就是数据排成像一条线一样的结构。每个线性表上的数据最多只有前和后两个方向。其实除了数组，链表、队列、栈等也是线性表结构。
 
-![avatar](http://baidu.com/pic/doge.png)
+![avatar](https://static001.geekbang.org/resource/image/b6/77/b6b71ec46935130dff5c4b62cf273477.jpg)
