--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -76,3 +76,25 @@ a[i]_address = base_address + i * data_type_size
 
 如果你了解 JVM，你会发现，这不就是 JVM 标记清除垃圾回收算法的核心思想吗？没错，数据结构和算法的魅力就在于此，很多时候我们并不是要去死记硬背某个数据结构或者算法，而是要学习它背后的思想和处理技巧，这些东西才是最有价值的。如果你细心留意，不管是在软件开发还是架构设计中，总能找到某些算法和数据结构的影子。
 
+## 警惕数组的访问越界问题
+
+了解了数组的几个基本操作后，我们来聊聊数组访问越界的问题。
+
+首先，我请你来分析一下这段 C 语言代码的运行结果：
+
+```m
+int main(int argc, char* argv[]) {
+  int i = 0;
+  int arr[3] = {0};
+  for(; i<=3; i++){
+     arr[i] = 0;
+     printf("hello world\n");
+  }
+  return 0;
+}
+```
+
+你发现问题了吗？这段代码的运行结果并非是打印三行“hello word”，而是会无限打印“hello world”，这是为什么呢？
+
+因为，数组大小为 3，a[0]，a[1]，a[2]，而我们的代码因为书写错误，导致 for 循环的结束条件错写为了 i<=3 而非 i<3，所以当 i=3 时，数组 a[3]访问越界。
+
