--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -146,5 +146,19 @@ for (int i = 0; i < 10000; ++i) {
 
 ## 解答开篇
 
+现在我们来思考开篇的问题：为什么大多数编程语言中，数组要从 0 开始编号，而不是从 1 开始呢？
+
+从数组存储的内存模型上来看，“下标”最确切的定义应该是“偏移（offset）”。前面也讲到，如果用 a 来表示数组的首地址，a[0]就是偏移为 0 的位置，也就是首地址，a[k]就表示偏移 k 个 type_size 的位置，所以计算 a[k]的内存地址只需要用这个公式：
+
+```txt
+a[k]_address = base_address + k * type_size
+```
+
+但是，如果数组从 1 开始计数，那我们计算数组元素 a[k]的内存地址就会变为：
+
+```txt
+a[k]_address = base_address + (k-1)*type_size
+```
+
 
 
