--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -170,5 +170,7 @@ a[k]_address = base_address + (k-1)*type_size
 
 ## 内容小结
 
+我们今天学习了数组。它可以说是最基础、最简单的数据结构了。数组用一块连续的内存空间，来存储相同类型的一组数据，最大的特点就是支持随机访问，但插入、删除操作也因此变得比较低效，平均情况时间复杂度为 O(n)。在平时的业务开发中，我们可以直接使用编程语言提供的容器类，但是，如果是特别底层的开发，直接使用数组可能会更合适。
+
 
 
