--- a/基础篇/数组.md
+++ b/基础篇/数组.md
@@ -158,6 +158,7 @@ a[k]_address = base_address + k * type_size
 
 ```txt
 a[k]_address = base_address + (k-1)*type_size
+a[k]_address = base_address + (k-1)*type_size
 ```
 
 对比两个公式，我们不难发现，从 1 开始编号，每次随机访问数组元素都多了一次减法运算，对于 CPU 来说，就是多了一次减法指令。
