--- a/基础篇/链表上.md
+++ b/基础篇/链表上.md
@@ -22,4 +22,6 @@
 
 而链表恰恰相反，它并不需要一块连续的内存空间，它通过“指针”将一组零散的内存块串联起来使用，所以如果我们申请的是 100MB 大小的链表，根本不会有问题。
 
-![avatar](/assets/image/1.jpg)
+![avatar](../assets/image/1.jpg)
+
+
