feat: 🎯链表（下）：如何轻松写出正确的链表代码？

--- a/基础篇/链表下.md
+++ b/基础篇/链表下.md
@@ -223,3 +223,180 @@ int find(char* a, int n, char key) {
 这节我主要和你讲了写出正确链表代码的六个技巧。分别是理解指针或引用的含义、警惕指针丢失和内存泄漏、利用哨兵简化实现难度、重点留意边界条件处理，以及举例画图、辅助思考，还有多写多练。
 
 我觉得，写链表代码是最考验逻辑思维能力的。因为，链表代码到处都是指针的操作、边界条件的处理，稍有不慎就容易产生 Bug。链表代码写得好坏，可以看出一个人写代码是否够细心，考虑问题是否全面，思维是否缜密。所以，这也是很多面试官喜欢让人手写链表代码的原因。所以，这一节讲到的东西，你一定要自己写代码实现一下，才有效果
+
+
+## js 实现单向链表
+
+```js
+   /**
+     * 一个简单的单向链表
+     * @constructor
+     */
+    // 节点
+    function Node(element) {
+      this.element = element;   //当前节点的元素
+      this.next = null;         //下一个节点链接
+    }
+//链表类
+    function LList () {
+      this.head = new Node( 'head' ); //头节点
+      this.find = find;               //查找节点
+      this.insert = insert;           //插入节点
+      this.remove = remove;           //删除节点
+      this.findPrev = findPrev;       //查找前一个节点
+      this.display = display;         //显示链表
+    }
+    //查找节点
+    function find(item) {
+      var currNode = this.head
+      while(currNode.element !== item) {
+        currNode = currNode.next
+      }
+      return currNode
+    }
+    //插入节点
+    function insert(newElement, item) {
+      var newNode = new Node(newElement)
+      var currNode = this.find(item)
+      newNode.next = currNode.next
+      currNode.next = newNode
+    }
+    //删除节点
+    function remove(item) {
+      var prevNode = this.findPrev(item)
+      var currNode = this.find(item)
+      if(prevNode.next !== null) {
+        prevNode.next = prevNode.next.next
+        currNode.next = null
+      }
+
+    }
+    //查找前一个节点
+    function findPrev(item) {
+      var currNode = this.head
+      while(currNode.next !== null && currNode.next.element !== item) {
+        currNode = currNode.next
+      }
+      return currNode
+    }
+    //显示链表
+    function display() {
+      var currNode = this.head
+      while(currNode.next !== null) {
+        currNode = currNode.next
+        console.log(currNode.element)
+      }
+    }
+    var llist = new LList()
+    llist.insert('小黑', 'head')
+    llist.insert('小白', '小黑')
+    llist.insert('小紫', '小白')
+    llist.insert('小蓝', '小紫')
+    llist.display()
+    llist.remove('小白')
+    llist.display()
+```
+
+## js 实现双向链表
+
+```js
+   //节点
+
+function Node(element) {
+    this.element = element;   //当前节点的元素
+    this.next = null;         //下一个节点链接
+    this.previous = null;         //上一个节点链接
+}
+
+//链表类
+
+function LList () {
+    this.head = new Node( 'head' );
+    this.find = find;
+    this.findLast = findLast;
+    this.insert = insert;
+    this.remove = remove;
+    this.display = display;
+    this.dispReverse = dispReverse;
+}
+
+//查找元素
+
+function find ( item ) {
+    var currNode = this.head;
+    while ( currNode.element != item ){
+        currNode = currNode.next;
+    }
+    return currNode;
+}
+
+//查找链表中的最后一个元素
+
+function findLast () {
+    var currNode = this.head;
+    while ( !( currNode.next == null )){
+        currNode = currNode.next;
+    }
+    return currNode;
+}
+
+
+//插入节点
+
+function insert ( newElement , item ) {
+    var newNode = new Node( newElement );
+    var currNode = this.find( item );
+    newNode.next = currNode.next;
+    newNode.previous = currNode;
+    currNode.next = newNode;
+}
+
+//显示链表元素
+
+function display () {
+    var currNode = this.head;
+    while ( !(currNode.next == null) ){
+        console.debug( currNode.next.element );
+        currNode = currNode.next;
+    }
+}
+
+//反向显示链表元素
+
+function dispReverse () {
+    var currNode = this.findLast();
+    while ( !( currNode.previous == null )){
+        console.log( currNode.element );
+        currNode = currNode.previous;
+    }
+}
+
+//删除节点
+
+function remove ( item ) {
+    var currNode = this.find ( item );
+    if( !( currNode.next == null ) ){
+        currNode.previous.next = currNode.next;
+        currNode.next.previous = currNode.previous;
+        currNode.next = null;
+        currNode.previous = null;
+    }
+}
+
+var fruits = new LList();
+
+fruits.insert('Apple' , 'head');
+fruits.insert('Banana' , 'Apple');
+fruits.insert('Pear' , 'Banana');
+fruits.insert('Grape' , 'Pear');
+
+console.log( fruits.display() );        // Apple
+                                        // Banana
+                                        // Pear
+                                        // Grape
+
+console.log( fruits.dispReverse() );    // Grape
+                                        // Pear
+                                        // Banana
+                                        // Apple
+```
